--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1619,22 +1619,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color= #6B6B6B>"
+    "><font color= #6B6B6B> Para la inversión activa se considera el portafolio inicial pasado y se identifica el activo con mayor participación, de este activo se reduce la participación a la mitad y lo sobrante se agrega a cash. Con el nuevo monto en cash se comprará el mismo activo siempre que el activo en el día tenga un comportamiento bajista, es decir, que su precio de apertura sea mayor al precio de cierre. Lo anterior mencionado con una periodicidad diaria."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#identificar el activo con mayor participación:\n",
+    "\n",
+    "mayor = pos_datos[pos_datos['Peso (%)'] == max(pos_datos['Peso (%)'])]['Ticker'][0] # devuelve el ticker"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Obtener datos de apertura\n",
+    "data_open = pd.DataFrame({i: data[i]['Open'] for i in global_tickers})\n",
+    "df_activa = pd.DataFrame(index= np.arange(0,len(all_files)+1),columns=['timestamp','capital', 'rend', 'rend_acum'])\n",
+    "k = 1000000\n",
+    "c = 0.00125\n",
+    "df_activa.capital[0]=k\n",
+    "df_activa.timestamp[0] = '2018-01-30'\n",
+    "df_activa.timestamp[1:] = i_fechas\n",
+    "df_operaciones = pd.DataFrame(index=np.arange(len(data_close)), columns=['timestamp', 'titulos_totales', 'titulos_compra',\n",
+    "                              'precio', 'comision','comision_acum'])\n",
+    "act_datos = data_archivos[all_files[0]][['Ticker', 'Nombre', 'Peso (%)']]\n",
+    "act_datos=pd.DataFrame(act_datos)\n",
+    "c_activos = ['KOFL', 'KOFUBL', 'BSMXB', 'MXN', 'USD']            #tickers a eliminar\n",
+    "act_datos.drop(list(act_datos[list(act_datos['Ticker'].isin(c_activos))].index), inplace=True)  # eliminar tickers\n",
+    "act_datos['Ticker'] = act_datos['Ticker'] + '.MX'\n",
+    "act_datos['Ticker'] = act_datos['Ticker'].replace(['LIVEPOLC.1.MX','MEXCHEM.MX','GFREGIOO.MX'],\n",
+    "                                                      ['LIVEPOLC-1.MX','ORBIA.MX','RA.MX'])\n",
+    "act_datos['Peso (%)'] = act_datos['Peso (%)'].replace(act_datos['Peso (%)'][act_datos.Ticker==mayor][0],\n",
+    "                                                          act_datos['Peso (%)'][act_datos.Ticker==mayor][0]/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "act_datos['Precio'] = [precios.iloc[0, precios.columns.to_list().index(j)] for j in act_datos['Ticker']]\n",
+    "act_datos['Capital'] = act_datos['Peso (%)'] * k - act_datos['Peso (%)'] * k * c\n",
+    "act_datos['Titulos'] = np.round(act_datos['Capital'] / act_datos['Precio'])\n",
+    "act_datos['Postura'] = act_datos['Titulos']*act_datos['Precio']\n",
+    "act_datos['Comision'] = act_datos['Postura'] * c\n",
+    "\n",
+    "act_cash = k - act_datos['Postura'].sum() - act_datos['Comision'].sum()\n",
+    "df_activa.capital[1] = act_datos['Postura'].sum() + act_cash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(data_close)-1):\n",
+    "    if data_open[mayor][i]>data_close[mayor][i]:\n",
+    "        df_operaciones.timestamp[i] = data_close.index[i]\n",
+    "        df_operaciones.titulos_compra[i] = np.round((act_cash*0.1)/data_close[mayor][i+1])\n",
+    "        df_operaciones.precio[i]=data_close[mayor][i+1]\n",
+    "        df_operaciones.comision[i] = data_close[mayor][i+1] + df_operaciones.titulos_compra[i]*c\n",
+    "        act_cash = act_cash- df_operaciones.titulos_compra[i]*df_operaciones.precio[i]-df_operaciones.comision[i]\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "><font color= #6B6B6B> Una vez obtenidos los totales de las compras de las operaciones se agregan al Dataframe de inversión pasiva para ser completada. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1645,11 +1709,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "><font color= #6B6B6B> La ventaja de la inversión pasiva es el bajo costo de transacción, mientras que en la activa los costos de transacción son más elevados. Quizá no sea conveniente realizar la inversión activa porque los movimientos en el mercado mexicano no son lo suficientemente grandes para compensar el costo de transacción."
+   ]
   }
  ],
  "metadata": {
